# ipc-server

./: CMakeLists.txt  LICENSE
server/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
